--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "threejs-learn",
+  "name": "davidportfolio",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^5.4.10"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "jsm": "^0.0.1",
-    "three": "^0.170.0"
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
+    "next": "14.1.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "three": "^0.171.0"
+  },
+  "devDependencies": {
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
