--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "davidportfolio",
+  "name": "temporaryproj",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,13 +11,13 @@
   "dependencies": {
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
-    "next": "14.1.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "three": "^0.171.0"
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "three": "^0.158.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7"
   }
 }
