--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@react-three/fiber": "^8.17.10",
     "next": "^14.2.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "three": "^0.158.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "postcss": "^8.4.40",
